# Tetris-Remake

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  CheckCollision.c  Game.c  LICENSE  README.md  Tetris.c  TetrisDraw.c  TetrisLogic.c  build-tetris.bat  conan_provider.cmake  conanfile.txt  my_tetris.c
include/: console_utilities.h  extra_colors.h  tetris.h
includes/: Tetris.h  debug_defines.h  extra_colors.h  game_settings.h  my_tetris.h  scenes.h  singly_linked.h
scenes/: GameLoop.c  GameOver.c  MainGame.c  ScenesFuncs.c  StartMenu.c
src/: Game.c  Tetris.c  TetrisDraw.c  TetrisLogic.c  TetrisStageLogic.c
src/SinglyLinkedLists/: SinglyLinkedList.c
src/scenes/: GameLoop.c  GameOver.c  ScenesFuncs.c  StartMenu.c
